# sber-agents

./: README.md
02-llm-api/reports/: report.md
03-aidd/: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  report.md
03-aidd/.cursor/rules/: conventions.mdc  workflow.mdc
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
03-aidd/homework/: README.md  tools-setup.md
03-aidd/live/: .env.example  .gitignore  README.md  pyproject.toml
03-aidd/live/docs/: idea.md  tasklist.md  vision.md
03-aidd/live/src/: config.py  handlers.py  llm.py
03-aidd/prompts/: system_prompt.txt
03-aidd/src/: bot.py  config.py  handlers.py  llm.py  memory.py
04-multimodal/: README.md  report.md
04-multimodal/homework/: README.md
04-multimodal/live/: .env.example  README.md  download_vosk.py  env_example.txt  pyproject.toml  report.md  test_vosk.py
04-multimodal/live/docs/: idea.md  tasklist.md  vision.md
04-multimodal/live/src/: config.py  handlers.py
04-multimodal/slides/: README.md  incontext-multi-local-notebook.ipynb
05-rag-langchain/homework/: README.md
05-rag-langchain/live/: pyproject.toml  report.md
05-rag-langchain/live/data/: sberbank_help_documents.json
05-rag-langchain/live/prompts/: query_transform.txt
05-rag-langchain/live/src/: bot.py  config.py  handlers.py  indexer.py  indexer_with_json.py  rag.py
06-monitoring-qa/: README.md
06-monitoring-qa/homework/: README.md
06-monitoring-qa/lecture/: .gitignore  env.example  rag-evaluation-lecture.md
docs/: idea.md
(+1 files in other folders)
